Fix sigin and signup forms responsiveness on mobile devices

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -76,4 +76,12 @@ legend {
   header h2 {
     font-size: 30px;
   }
+
+  .card {
+    width: 100%;
+  }
+
+  .form-group {
+    width: 80%;
+  }
 }
